--- a/templates/base.html
+++ b/templates/base.html
@@ -30,16 +30,21 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{{ url_for('admin.workflow') }}">Workflow</a>
                     <div class="dropdown-divider"></div>
+                    {% if "SECURITY_ADMIN" in g.permissions %}
+                        <a class="dropdown-item" href="{{ url_for('admin.users') }}">Users</a>
+                        <a class="dropdown-item" href="{{ url_for('admin.roles') }}">Roles</a>
+                        <div class="dropdown-divider"></div>
+                    {% endif %}
                     <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a>
                 </div>
             </div>
         </div>
         {% elif url_for(request.endpoint) == url_for("auth.login") %}
             <div class="navbar-nav mr-auto"></div>
-            <a class="btn btn-outline-primary float-right mr-2" href="{{ url_for('auth.register') }}">Register</a>
+            <a class="btn btn-outline-primary mr-2" href="{{ url_for('auth.register') }}">Register</a>
         {% elif url_for(request.endpoint) == url_for("auth.register") %}
             <div class="navbar-nav mr-auto"></div>
-            <a class="btn btn-outline-primary float-right mr-2" href="{{ url_for('auth.login') }}">Sign in</a>
+            <a class="btn btn-outline-primary mr-2" href="{{ url_for('auth.login') }}">Sign in</a>
         {% endif %}
     </nav>
     {% for message in get_flashed_messages() %}
