--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -3,30 +3,46 @@
 {% block title %}Users and Roles{% endblock %}
 
 {% block content %}
-    <table class="table my-2">
-        <thead class="thead-light">
-            <tr>
-                <th class="align-middle" scope="col">User</th>
-                <th class="align-middle" scope="col">Full Name</th>
-                <th class="align-middle text-center" scope="col">Enabled</th>
-                <th class="align-middle" scope="col">Roles</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for user in users %}
+    <form method="post">
+        <table class="table my-2">
+            <thead class="thead-light">
                 <tr>
-                    <th scope="row">{{ user.user_name }}</th>
-                    <td>{{ user.full_name }}</td>
-                    <td class="text-center"><input type="checkbox" disabled {{ "checked" if user.enabled == 1}}></td>
-                    <td>
-                        {% for role in user.roles %}
-                            <div>{{ role }}</div>
-                        {% endfor %}
-                    </td>
+                    <th class="align-middle" scope="col">User</th>
+                    <th class="align-middle" scope="col">Full Name</th>
+                    <th class="align-middle text-center" scope="col">Enabled</th>
+                    <th class="align-middle" scope="col">Roles</th>
+                    <th class="align-middle text-center" scope="col">Assigned</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                {% for user in users %}
+                    <tr>
+                        <th scope="row">
+                            {{ user.user_name }}
+                        </th>
+                        <td>{{ user.full_name }}</td>
+                        <td class="text-center"><input type="checkbox" disabled {{ "checked" if user.enabled == 1}}></td>
+                        <td>
+                            {% for role in user.roles %}
+                                <div>{{ role }}</div>
+                            {% endfor %}
+                        </td>
+                        <td class="text-center">
+                            {% for role_id, assigned in user.assigned %}
+                                <div><input type="checkbox" name="assigned" {{ "checked" if assigned == "1" }} value="{{ ",".join([user.user_id, role_id]) }}"/></div>
+                            {% endfor %}
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <div class="btn-toolbar my-4" role="toolbar">
+            <div role="group">
+                <a class="btn btn-secondary mr-2" style="width: 90px;" href="{{ url_for("practice.index") }}">Back</a>
+                <button class="btn btn-danger" style="width: 80px;" type="submit">Apply</button>
+            </div>
+        </div>
+    </form>
 {% endblock %}
 
 
