--- a/templates/practice/delete.html
+++ b/templates/practice/delete.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 
-{% block title %}Delete Practice # {{ id }}{% endblock %}
+{% block title %}Delete Practice {{ id }}{% endblock %}
 
 {% block content %}
     <div class="card my-2">
         <div class="card-header">
-            Delete practice # {{ id }}
+            Delete practice {{ id }}
         </div>
         <div class="card-body">
             <h5 class="card-title">Are you sure you want to delete this item?</h5>
             <p class="card-text">{{ title }}</p>
-            <div class="btn-toolbar justify-content-between my-4" role="toolbar">
+            <div class="btn-toolbar my-4" role="toolbar">
                 <div role="group">
                     <form action="{{ url_for('practice.delete', id=id, page=page, query=query) }}" method="post">
                         <a class="btn btn-secondary mr-2" style="width: 90px;" href="{{ url_for('practice.details', id=id, page=page, query=query) }}">Cancel</a>
