--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -38,7 +38,7 @@
         </table>
         <div class="btn-toolbar my-4" role="toolbar">
             <div role="group">
-                <a class="btn btn-secondary mr-2" style="width: 90px;" href="{{ url_for("practice.index") }}">Back</a>
+                <a class="btn btn-secondary mr-2" style="width: 90px;" href="{{ url_for("practice.index") }}">Close</a>
                 <button class="btn btn-danger" style="width: 80px;" type="submit">Apply</button>
             </div>
         </div>
