--- a/templates/admin/workflow.html
+++ b/templates/admin/workflow.html
@@ -7,4 +7,7 @@
         <img class="figure-img img-fluid" src="{{ url_for('static', filename='workflow.png') }}" alt="Workflow">
         <figcaption class="figure-caption text-right">Workflow specification for the promising practices data operations</figcaption>
     </figure>
+    <div class="btn-toolbar my-4" role="toolbar">
+            <a class="btn btn-secondary" style="width: 90px;" href="{{ url_for("practice.index") }}">Close</a>
+    </div>
 {% endblock %}
