--- a/templates/admin/roles.html
+++ b/templates/admin/roles.html
@@ -7,7 +7,7 @@
         <thead class="thead-light">
             <tr>
                 <th class="align-middle" scope="col">Role</th>
-                <th class="align-middle" scope="col">Permission</th>
+                <th class="align-middle" scope="col">Permissions</th>
                 <th class="align-middle text-center" scope="col">Assigned</th>
             </tr>
         </thead>
