--- a/templates/practice/details.html
+++ b/templates/practice/details.html
@@ -120,4 +120,19 @@
             <a class="btn btn-outline-danger d-inline float-right" style="width: 90px;" href="{{ url_for('practice.delete', id=practice.id, title=practice.title, page=page, query=query) }}">Delete</a>
         {% endif %}
     </div>
+    <hr class="my-4"/>
+    {% for comment in comments %}
+        <div class="my-2 mx-4">
+            <div class="d-flex justify-content-between text-muted">
+                <div><small><strong>{{ comment.full_name }}</strong></small></div>
+                <div><small>{{ comment.created_on }}</small></div>
+            </div>
+            <div>{{ comment.comment }}</div>
+        </div>
+    {% endfor %}
+    <hr class="my-4"/>
+    <form action="{{ url_for("practice.comment", id=practice.id, query=query, page=page) }}" method="post">
+        <textarea class="form-control" rows="3" name="comment" placeholder="Type your comments here"></textarea>
+        <input class="btn btn-light my-4" type="submit" value="Comment"/>
+    </form>
 {% endblock %}
