--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,11 @@
         {% endif %}
     </nav>
     {% for message in get_flashed_messages() %}
-    <div class="alert {{ message["status"] }}" role="alert">{{ message["text"] }}</div>
+        <div class="alert {{ message["status"] }} alert-dismissible fade show" role="alert">{{ message["text"] }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true"><i class="fas fa-times fa-sm"></i></span>
+            </button>
+        </div>
     {% endfor %}
     <div class="container">{% block content %}{% endblock %}</div>
     <!-- Optional JavaScript -->
