Comments and notifications were improved

--- a/templates/admin/roles.html
+++ b/templates/admin/roles.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Roles and Permissions{% endblock %}
+{% block title %}Roles and permissions{% endblock %}
 
 {% block content %}
     <table class="table my-2">
