--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Users and Roles{% endblock %}
+{% block title %}Users and roles{% endblock %}
 
 {% block content %}
     <form method="post">
