--- a/templates/practice/delete.html
+++ b/templates/practice/delete.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Delete Practice {{ id }}{% endblock %}
+{% block title %}Delete practice {{ id }}{% endblock %}
 
 {% block content %}
     <div class="card my-2">
