--- a/templates/practice/edit.html
+++ b/templates/practice/edit.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Edit Practice {{ practice.id }}{% endblock %}
+{% block title %}Edit practice {{ practice.id }}{% endblock %}
 
 {% block content %}
     <form method="post">
