--- a/templates/practice/index.html
+++ b/templates/practice/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Promising Practices{% endblock %}
+{% block title %}Promising practices{% endblock %}
 
 {% block content %}
     <table class="table my-2">
