--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Log In{% endblock %}
+{% block title %}Sign in{% endblock %}
 
 {% block content %}
     <form class="needs-validation" method="post" novalidate>
