--- a/templates/practice/create.html
+++ b/templates/practice/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Create New Practice{% endblock %}
+{% block title %}Create new practice{% endblock %}
 
 {% block content %}
     <form method="post">
