--- a/templates/practice/details.html
+++ b/templates/practice/details.html
@@ -120,7 +120,7 @@
     {% for comment in comments %}
         <div class="mb-4 mx-4">
             <div class="d-flex justify-content-between text-muted">
-                <div class="font-weight-bold small {{ "text-danger" if comment["user_id"] == g.user["id"] }}">{{ comment.full_name }}</div>
+                <div class="font-weight-bold small {{ "text-info" if comment["user_id"] == g.user["id"] }}">{{ comment.full_name }}</div>
                 <div><small>{{ comment.created_on }}</small></div>
             </div>
             <div class="bg-light">{{ comment.comment|safe }}</div>
