Variety of improvements.

--- a/templates/admin/roles.html
+++ b/templates/admin/roles.html
@@ -30,7 +30,7 @@
         </tbody>
     </table>
     <div class="btn-toolbar my-4" role="toolbar">
-            <a class="btn btn-secondary" style="width: 90px;" href="{{ url_for("practice.index") }}">Close</a>
+            <a class="btn btn-secondary" href="{{ url_for("practice.index") }}">Close</a>
     </div>
 {% endblock %}
 
