--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -11,7 +11,7 @@
             <div class="card-body">
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input class="form-control" name="username" id="username" placeholder="Enter username" required>
+                    <input class="form-control" name="username" id="username" placeholder="Enter username" required autofocus>
                     <div class="invalid-feedback">
                         Please provide a username.
                     </div>
