--- a/templates/base.html
+++ b/templates/base.html
@@ -28,14 +28,18 @@
             <div class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle mr-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ g.user["full_name"] }}</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="{{ url_for('workspace.threads') }}">My threads</a>
-                    <a class="dropdown-item" href="{{ url_for('workspace.workflow') }}">Workflow</a>
-                    <div class="dropdown-divider"></div>
                     {% if "SECURITY_ADMIN" in g.permissions %}
+                        <a class="dropdown-item" href="{{ url_for('workspace.threads') }}">My threads</a>
+                        <a class="dropdown-item" href="{{ url_for('workspace.workflow') }}">Workflow</a>
+                        <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{{ url_for('admin.users') }}">Users</a>
                         <a class="dropdown-item" href="{{ url_for('admin.roles') }}">Roles</a>
-                        <div class="dropdown-divider"></div>
+                    {% else %}
+                        <a class="dropdown-item" href="{{ url_for('workspace.threads') }}">My threads</a>
+                        <a class="dropdown-item" href="{{ url_for('workspace.team') }}">My team</a>
+                        <a class="dropdown-item" href="{{ url_for('workspace.workflow') }}">Workflow</a>
                     {% endif %}
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a>
                 </div>
             </div>
