--- a/templates/workspace/workflow.html
+++ b/templates/workspace/workflow.html
@@ -8,6 +8,6 @@
         <figcaption class="figure-caption text-right">Workflow specification for the promising practices data operations</figcaption>
     </figure>
     <div class="btn-toolbar my-4" role="toolbar">
-        <a class="btn btn-secondary" style="width: 90px;" href="{{ url_for("practice.index") }}">Close</a>
+        <a class="btn btn-secondary" href="{{ url_for("practice.index") }}">Close</a>
     </div>
 {% endblock %}
