Minor styling changes.

--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -40,8 +40,8 @@
         </table>
         <div class="btn-toolbar my-4" role="toolbar">
             <div role="group">
-                <a class="btn btn-secondary mr-2" href="{{ url_for("practice.index") }}">Close</a>
-                <button class="btn btn-danger" type="submit">Apply</button>
+                <a class="btn btn-sm btn-secondary mr-2" href="{{ url_for("practice.index") }}">Close</a>
+                <button class="btn btn-sm btn-danger" type="submit">Apply</button>
             </div>
         </div>
     </form>
