--- a/templates/workspace/team.html
+++ b/templates/workspace/team.html
@@ -31,6 +31,6 @@
         </tbody>
     </table>
     <div class="btn-toolbar my-4" role="toolbar">
-        <a class="btn btn-secondary mr-2" href="{{ url_for("practice.index") }}">Close</a>
+        <a class="btn btn-sm btn-secondary mr-2" href="{{ url_for("practice.index") }}">Close</a>
     </div>
 {% endblock %}
