--- a/templates/workspace/threads.html
+++ b/templates/workspace/threads.html
@@ -19,14 +19,14 @@
                     <a class="{{ "text-muted" if mention.was_read }}" href="{{ url_for("practice.details", id=mention.document_id) }}">Details</a>
                 </div>
                 <div class="col-1 text-nowrap">
-                    <a class="{{ "text-muted" if mention.was_read }}" href="{{ url_for("workspace.dismiss", id=mention.document_id) }}">Dismiss</a>
+                    <a class="text-muted" href="{{ url_for("workspace.dismiss", id=mention.document_id) }}">Dismiss</a>
                 </div>
             </div>
             {{ "<hr/>"|safe if not loop.last }}
         {% endfor %}
     </div>
     <div class="btn-toolbar my-4" role="toolbar">
-        <a class="btn btn-secondary mr-2" href="{{ url_for("practice.index") }}">Close</a>
+        <a class="btn btn-sm btn-secondary mr-2" href="{{ url_for("practice.index") }}">Close</a>
     </div>
 {% endblock %}
 
