--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -6,7 +6,7 @@
     <form class="needs-validation" method="post" novalidate>
         <div class="card my-2">
             <div class="card-header">
-                Sign in to Promising Practices Data Operations
+                Promising Practices Data Operations
             </div>
             <div class="card-body">
                 <div class="form-group">
@@ -24,7 +24,10 @@
                         Please provide a password.
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Sign in</button>
+                <div class="mt-4">
+                    <button type="submit" class="btn btn-primary">Sign in</button>
+                    <small class="ml-2"> or <a href="{{ url_for('auth.register') }}">create</a> new account</small>
+                </div>
             </div>
         </div>
     </form>
