--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -21,7 +21,7 @@
                         <th scope="row">{{ user.user_name }}</th>
                         <td>{{ user.full_name }}</td>
                         <td class="text-center">
-                            <input type="checkbox" name="enabled" {{ "disabled" if user.user_name == "admin" }} {{ "checked" if user.is_enabled == 1 }} value="{{ user.user_id }}"/>
+                            <input type="checkbox" name="enabled" {{ "disabled" if user.user_name == g.user["user_name"] }} {{ "checked" if user.is_enabled == 1 }} value="{{ user.user_id }}"/>
                         </td>
                         <td>
                             {% for _, role_name, _ in user.roles %}
