--- a/templates/admin/roles.html
+++ b/templates/admin/roles.html
@@ -23,7 +23,7 @@
                         </td>
                         <td class="text-center">
                             {% for permission_id, permission_name, assigned in role.permissions %}
-                                <div><input type="checkbox" name="assigned" {{ "checked" if assigned == "1" }} {{ "disabled" if role.role_name == "administrator" and permission_name.endswith("_ADMIN") }} value="{{ ",".join([role.role_id, permission_id]) }}"></div>
+                                <div><input type="checkbox" name="assigned" {{ "checked" if assigned == "1" }} {{ "disabled" if role.role_name == "administrator" and permission_name.startswith("ADMIN_") }} value="{{ ",".join([role.role_id, permission_id]) }}"></div>
                             {% endfor %}
                         </td>
                     </tr>
